--- a/React-QA/package.json
+++ b/React-QA/package.json
@@ -12,6 +12,7 @@
     "browser-sync": "^2.17.5",
     "browserify": "^13.1.1",
     "gulp": "^3.9.1",
+    "lodash": "^4.16.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "reactify": "^1.1.1",
